# motu-proxy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
motu_proxy/: __init__.py  cli.py  datastore.py  device.py  fixtures.py  http_server.py  json_body.py  parser.py  paths.py  protocol.py  schema.py
motu_proxy/transports/: __init__.py  usbfs.py
openspec/changes/add-capability-discovery/: tasks.md
openspec/changes/add-ci-dev-tooling/: design.md  proposal.md  tasks.md
openspec/changes/add-datastore-http-api-compat/: proposal.md  tasks.md
openspec/changes/add-datastore-type-permission-model/: design.md  proposal.md  tasks.md
openspec/changes/add-etag-long-polling/: design.md  proposal.md  tasks.md
openspec/changes/add-hotplug-recovery/: design.md  tasks.md
openspec/changes/add-meters-passthrough/: design.md  proposal.md  tasks.md
openspec/changes/add-mixer-control/: design.md  proposal.md  tasks.md
openspec/changes/add-production-service-packaging/: design.md  proposal.md  tasks.md
openspec/changes/add-python-type-checking/: design.md  proposal.md  tasks.md
openspec/changes/avoid-long-poll-foreground-blocking/: design.md  tasks.md
openspec/changes/broaden-ruff-rules/: design.md  tasks.md
openspec/changes/enable-http-11-keepalive/: design.md  tasks.md
openspec/changes/init-motu-usb-proxy/: design.md  proposal.md  tasks.md
research/camilladsp-meters-comparison/: cdsp.yml  cdsp_bench.py  cdsp_introspect.py  findings.md
research/spike-metering/: findings.md
tests/: __init__.py  helpers.py  test_cli.py  test_datastore.py  test_device.py  test_http_compat_contract.py  test_http_server.py  test_live_validate_response_frames.py  test_parser_and_paths.py  test_protocol.py  test_schema.py  test_usbfs.py
tools/: live-response-frame-validation.md  live_validate_foreground_preemption.py  live_validate_response_frames.py
(+65 files in other folders)
