[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "motu-proxy"
version = "0.1.0"
description = "Dependency-light MOTU AVB USB datastore proxy"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
motu-proxy = "motu_proxy.cli:main"

[tool.setuptools.packages.find]
include = ["motu_proxy*"]
